--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,10 +1,10 @@
 :root {
-    --md-primary-fg-color: #1937ff;
-    --md-footer-bg-color: #1937ff;
+    --md-primary-fg-color: #0156a5;
+    --md-footer-bg-color: #0156a5;
 }
 
 :root>* {
-    --md-footer-bg-color: #1937ff;
+    --md-footer-bg-color: #0156a5;
 }
 
 .md-typeset {
