--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,10 +1,11 @@
 :root {
-    --md-primary-fg-color: #0156a5;
-    --md-footer-bg-color: #0156a5;
+    --pochta-color:#0156a5;
+    --md-primary-fg-color: var(--pochta-color);
+    --md-footer-bg-color: var(--pochta-color);
 }
 
-:root>* {
-    --md-footer-bg-color: #0156a5;
+:root * {
+    --md-footer-bg-color: var(--pochta-color);
 }
 
 .md-typeset {
